--- a/dev/com.ibm.ws.messaging.open_clientcontainer_fat/publish/clients/com.ibm.ws.open_clientcontainer.fat.JMS2Container/bootstrap.properties
+++ b/dev/com.ibm.ws.messaging.open_clientcontainer_fat/publish/clients/com.ibm.ws.open_clientcontainer.fat.JMS2Container/bootstrap.properties
@@ -1,3 +1,2 @@
 bootstrap.include=../../servers/testports.properties
-com.ibm.ws.timedexit.timetolive=60000000
-#com.ibm.ws.logging.trace.specification=*=info:ChannelFramework=all:SIBCommunications=all:SIB*=all
+com.ibm.ws.timedexit.timetolive=600000
