--- a/dev/com.ibm.ws.microprofile.faulttolerance.2.1_fat_tck/publish/tckRunner/tck/pom.xml
+++ b/dev/com.ibm.ws.microprofile.faulttolerance.2.1_fat_tck/publish/tckRunner/tck/pom.xml
@@ -41,10 +41,10 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-	          <groupId>org.jboss.spec.javax.servlet</groupId>
-	          <artifactId>jboss-servlet-api_3.0_spec</artifactId>
-	          <version>1.0.2.Final</version> <!-- Defines the version of this artifact that arquillian-liberty-managed should use -->
-	        </dependency>
+                <groupId>org.jboss.spec.javax.servlet</groupId>
+                <artifactId>jboss-servlet-api_3.0_spec</artifactId>
+                <version>1.0.2.Final</version> <!-- Needed for ZOS. Defines the version of this artifact that arquillian-liberty-managed should use -->
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
