--- a/dev/ant_build.js/build.gradle
+++ b/dev/ant_build.js/build.gradle
@@ -9,8 +9,34 @@
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
 
+repositories.clear()
+repositories {
+    if (isUsingArtifactory) {
+        maven {
+            credentials {
+                username userProps.getProperty("artifactory.download.user")
+                password userProps.getProperty("artifactory.download.token")
+            }
+            url ("https://" + userProps.getProperty("artifactory.download.server") + "/artifactory/wasliberty-open-liberty")
+            metadataSources {
+                mavenPom()
+                artifact()
+            }
+        }
+    } else {
+        maven {
+            url ("http://public.dhe.ibm.com/ibmdl/export/pub/software/olrepo/")
+            metadataSources {
+                mavenPom()
+                artifact()
+            }
+        }
+        mavenCentral()
+    }
+}
+
 configurations {
-    library
+    library { transitive = false }
     node0
     node1
     node2
@@ -139,14 +165,19 @@ def copyDependency(File file, Map dependencyToPath) {
     File versionDir = hashDir.getParentFile()
     File nameDir = versionDir.getParentFile()
     File groupDir = nameDir.getParentFile()
-    def dest = dependencyToPath["${groupDir.getName()}:${nameDir.getName()}:${versionDir.getName()}"]
-    String path = dest.substring(0, dest.lastIndexOf("/"))
-    String name = dest.substring(dest.lastIndexOf("/") + 1, dest.length())
-    copy {
-        from file
-        into path
-        rename '.*', name
-        fileMode = Integer.parseInt('755', 8)
+    try {
+        def dest = dependencyToPath["${groupDir.getName()}:${nameDir.getName()}:${versionDir.getName()}"]
+        String path = dest.substring(0, dest.lastIndexOf("/"))
+        String name = dest.substring(dest.lastIndexOf("/") + 1, dest.length())
+        copy {
+            from file
+            into path
+            rename '.*', name
+            fileMode = Integer.parseInt('755', 8)
+        }
+    } catch (Exception e) {
+        String gav = "${groupDir.getName()}:${nameDir.getName()}:${versionDir.getName()}"
+        throw Exception("Error: Could not locate $gav in dependencyToPath variable in ant_build.js/build.gradle.")
     }
 }
 
