--- a/dev/com.ibm.ws.security.wim.adapter.ldap_fat.krb5/publish/servers/com.ibm.ws.security.registry.ldap.fat.krb5.base/bootstrap.properties
+++ b/dev/com.ibm.ws.security.wim.adapter.ldap_fat.krb5/publish/servers/com.ibm.ws.security.registry.ldap.fat.krb5.base/bootstrap.properties
@@ -9,4 +9,6 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 bootstrap.include=../testports.properties
-com.ibm.ws.logging.trace.specification=*=info
+com.ibm.ws.logging.trace.specification=*=info:com.ibm.ws.security.*=all
+# Temporary ignore of java2 security
+websphere.java.security.exempt=true
