--- a/dev/com.ibm.ws.transaction.PostgresqlHADB_fat/.classpath
+++ b/dev/com.ibm.ws.transaction.PostgresqlHADB_fat/.classpath
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="fat/src"/>
-	<classpathentry kind="src" path="test-applications/transaction/src"/>
+	<classpathentry kind="src" path="fat/src" including="com/ibm/ws/transaction/test/FATSuite.java"/>
+	<classpathentry kind="src" path="com.ibm.ws.transaction.DerbyHADB_fat-fatsrc" including="com/ibm/ws/transaction/test/tests/*.java"/>
+	<classpathentry kind="src" path="com.ibm.ws.transaction.DerbyHADB_fat-transaction"/>
+	<classpathentry kind="src" path="com.ibm.ws.transaction.DerbyHADB_fat-ifxlib" including="com/informix/jdbcx/*.java"/>
 	<classpathentry kind="src" path="test-bundles/ifxlib/src"/>
 	<classpathentry kind="con" path="aQute.bnd.classpath.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
