--- a/dev/io.openliberty.microprofile.rest.client.2.0.internal_fat_tck/publish/tckRunner/tck/pom.xml
+++ b/dev/io.openliberty.microprofile.rest.client.2.0.internal_fat_tck/publish/tckRunner/tck/pom.xml
@@ -16,6 +16,7 @@
     <version>2.0</version>
     <name>MicroProfile RestClient 2.0 TCK Runner TCK Module</name>
 
+<!--
     <repositories>
         <repository>
             <id>ibmdhe</id>
@@ -31,9 +32,10 @@
             </snapshots>
         </repository>
     </repositories>
+-->
 
     <properties>
-        <microprofile.rest.client.version>2.0.1-20210208</microprofile.rest.client.version>
+        <microprofile.rest.client.version>2.0.1-RC1</microprofile.rest.client.version>
         <arquillian.version>1.3.0.Final</arquillian.version>
 
         <!-- the below is used in arquillian.xml -->
