--- a/dev/io.openliberty.microprofile.config.2.0.internal_fat_tck/publish/tckRunner/tck/pom.xml
+++ b/dev/io.openliberty.microprofile.config.2.0.internal_fat_tck/publish/tckRunner/tck/pom.xml
@@ -76,6 +76,12 @@
             <artifactId>microprofile-config-tck</artifactId>
             <version>2.0</version>
         </dependency>
+        
+        <dependency>
+            <groupId>a.dumb.dependency</groupId>
+            <artifactId>i-should-break</artifactId>
+            <version>2.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.eclipse.microprofile.config</groupId>
