--- a/dev/com.ibm.ws.security.oauth.oidc_fat.common/build.gradle
+++ b/dev/com.ibm.ws.security.oauth.oidc_fat.common/build.gradle
@@ -22,6 +22,8 @@ dependencies {
      * for eash of retrieval by other projects.
      */
     collectedDeps 'org.mongodb:mongo-java-driver:2.13.3',
+                  'de.flapdoodle.embed:de.flapdoodle.embed.mongo:3.0.0',
+                  'org.apache.commons:commons-compress:1.20',
                   project(':io.openliberty.org.apache.commons.codec'),
                   project(':io.openliberty.org.apache.commons.logging'),
                   project(':com.ibm.json4j'),
