--- a/dev/com.ibm.ws.security.spnego_fat/publish/servers/IncludeCustomCacheKeyTest/bootstrap.properties
+++ b/dev/com.ibm.ws.security.spnego_fat/publish/servers/IncludeCustomCacheKeyTest/bootstrap.properties
@@ -12,7 +12,7 @@
 bootstrap.include=../testports.properties
 
 com.ibm.ws.logging.trace.specification=*=info=enabled:\
-com.ibm.ws.security.spnego*=all=enabled:\
+com.ibm.ws.security.spnego*=all=enabled
 
 com.ibm.ws.logging.max.file.size=0
 ds.loglevel=debug
